# Portfoliomanager

./: .checkpoint-trigger  .dependency-cruiser.js  .env.example  .gitignore  .mcp.json  ASYNC_JOB_NOTES.md  BUGS_ANALYSIS.md  CHANGELOG.md  CHARACTERIZATION_TESTS.md  CLAUDE.md  LOOP.md  OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATIONS.md  PORTFOLIO_BUILDER_REDESIGN.md  PORTFOLIO_DETAIL_REDESIGN_SPEC.md  RELEASE_NOTES.md  SCORE_CALCULATION.md  STATE.md  VERSION.txt  add-etfs.mjs  analysis_marc_portfolio.txt  analysis_notes.md  analyze-portfolio.mjs  backfill-adjusted-close.mjs  check-fx-rates.ts  check-new-portfolio.mjs  check-stock-currencies.ts  check_aireason2.mjs  check_amounts.mjs  check_benchmark.mjs  check_portfolio.cjs  check_prices.mjs  check_score.mjs  check_spy_ytd.mjs  check_tickers.js  check_ytd.mjs  check_ytd.ts  check_ytd_data.mjs  create_alert_config.cjs  diag-ki.mjs  (+60 more)
analytics_service/: .dockerignore  DEPLOY.md  Dockerfile  advanced_optimization.py  docker-compose.yml  edgar_integration.py  exact_optimizer.py  main.py  ml_training.py  requirements.txt  start.sh  tearsheet.py  test_ml_training.py
client/: index.html
design/: AI_ALPHA_ROADMAP.md  AUDIT_2026-07-B.md  AUDIT_2026-07.md  INVESTOR_PROFILE_CONCEPT.md  KONZEPT_PORTFOLIO_QUALITAET.md  LIVE_REVIEW_FINDINGS.md  MARKET_REGIME_CONCEPT.md  OPTIMIZATION_RECOMMENDATIONS_CONCEPT.md  RALPH_LOOP.md  RALPH_PROGRESS.md  STOCK_UNIVERSE_MERGE.md  (+2 more)
mcp-servers/financial-datasets/: Dockerfile  README.md  pyproject.toml  server.py
tradingview-service/: Dockerfile  README.md  main.py  pyproject.toml
(+1510 files in other folders)
