[project]
name = "financial-datasets-mcp"
version = "0.1.0"
description = "Financial Datasets MCP server (Streamable HTTP) für den Portfoliomanager"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
